Fix image stretch on product page

--- a/styles/components/ProductDisplay.module.scss
+++ b/styles/components/ProductDisplay.module.scss
@@ -18,8 +18,10 @@
     .ProductDisplayContentImage {
       grid-area: span 1;
       img {
-        width: 500px;
-        height: 500px;
+        max-width: 500px;
+        max-height: 500px;
+        width: 100%;
+        height: auto;
       }
     }
     .ProductDisplayContentMeta {
